--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,16 @@
             <version>8.0.28</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+
+
     </dependencies>
 
 </project>
